--- a/estilos.css
+++ b/estilos.css
@@ -139,6 +139,42 @@ color: transparent;
     text-align: end;
 }
 
+.servicios {
+    display: flex;
+    
+    flex-wrap: wrap;
+    gap: 20px;
+   
+}
+
+
+.servicio {
+    /* background-color: #fff; */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    flex-grow: 1;  /* Los elementos crecen para llenar el espacio disponible */
+    flex-basis: calc(50% - 20px);
+    text-align: center;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.servicio:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.servicio h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.servicio p {
+    font-size: 16px;
+    color: #666;
+}
+
 @media (max-width: 430px){
     header{
         height: 15vh;
